--- a/app/assets/stylesheets/app.css.sass
+++ b/app/assets/stylesheets/app.css.sass
@@ -3,6 +3,7 @@ $blue: #0BBCE8
 $blue-dark: #033665
 $gray-dark: #383B3B
 $yellow: #FFCF00
+$green: #009241
 
 $facebook-blue: #3d5a9b
 $twitter-blue: #25bce8
