--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -64,8 +64,7 @@
 .slide-2
   .row
     .title
-      h2 HOJE, CIVIS PODEM SER CONDENADOS PELA JUSTIÇA MILITAR
-      strong História real: T. R, 26 anos, agredida por militares e condenada a 6 meses de prisão
+      h2 História real: T. R, 26 anos, agredida por militares e condenada a 6 meses de prisão
   .row
     .text
       p Complexo do Alemão, 2011. Era madrugada quando T.R, então com 22 anos, saiu de casa para ajudar seu vizinho, que gritava por socorro enquanto era colocado em um jipe por militares. Sem entender o que acontecia, ela pediu para falar com ele, mas recebeu em troca um tiro de borracha no pé esquerdo, 3 dedos quebrados, e uma prisão.
