Minor style changes

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -168,6 +168,7 @@ p.lead
   .title, .text
     text-align: center
   .title
+    margin-bottom: 1em
     +grid-column(12)
     h2
       color: $gray-dark
@@ -342,11 +343,11 @@ form
   .slide-2
     .title
       +grid-column(12)
-      text-align: center
 
   .slide-3
     .title, .text
       +grid-column(12)
+      text-align: left
     img
       display: none
 
