--- a/app/views/poke_mailer/thanks_for_poke.html.slim
+++ b/app/views/poke_mailer/thanks_for_poke.html.slim
@@ -11,10 +11,8 @@ p Guilherme, Rodrigo, Alessandra e toda a equipe da Rede Meu Rio
 p
   | -----
 
-p Sr(a). Ministro(a) do Supremo Tribunal Federal Gilmar Mendes,
-
-p O senhor é o relator da ADPF 289, que argui a inconstitucionalidade do julgamento de civis por tribunais militares.
+p O senhor é o relator da ADPF 289, que argue a inconstitucionalidade do julgamento de civis por tribunais militares.
 
 p Como o senhor deve saber, o julgamento de um civil por um tribunal militar é feito com base no Código Penal Militar de 1969. Para nós, cidadãos, isso representa uma afronta à democracia.
 
-p Por isso, pedimos que julgue favoravelmente o pedido da Procuradoria Geral da República, tirando os civis do banco dos reús do tribunal militar.
+p Por isso, peço que julgue favoravelmente o pedido da Procuradoria Geral da República, tirando os civis do banco dos réus do tribunal militar.
