--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -15,11 +15,11 @@
     .title
       h2 Você sabia que no Brasil você ainda pode ser julgado por um tribunal militar?
     .text
-      p Apesar de vivermos em uma democracia,  qualquer cidadão civil pode virar reú da justiça militar, caso seja acusado de desacato ou outras formas de insubordinação contra membros das forças armadas.
+      p Apesar de vivermos em uma democracia,  qualquer cidadão civil pode virar reú da justiça militar, caso seja acusado de desacato ou outras formas de insubordinação contra membros das Forças Armadas.
       p A boa notícia é que a Procuradoria Geral da República acaba de entrar com uma ação no Supremo Tribunal Federal para acabar com esse absurdo. E o voto do STF deve ocorrer ainda esse ano!
       p Mas sabemos que os militares não querem abrir mão de seus privilégios, e já estão se movimentando para tentar influenciar os ministros do STF na semana do voto. É por isso que estamos unindo pessoas dispostas a orquestrar um contra-ataque.
       p
-        | Juntos, vamos criar a maior mobilização pela desmilitarização da justiça que o Brasil já viu. Mobilizadores inscritos receberão um email na semana do voto com o plano da missão para pressionar os ministros do STF nas ruas e nas redes. Venha fazer história junto com a gente!
+        | Juntos, vamos criar a maior mobilização pela desmilitarização da justiça que o Brasil já viu. Mobilizadores inscritos receberão um email com o plano da missão para pressionar os ministros do STF nas ruas e nas redes até a semana do voto. Venha fazer história junto com a gente!
         span.hash  #DesmilitarizaçãodaJustiça
 
   .form_wraper
@@ -53,7 +53,7 @@
     .feature
       = image_tag("justice/unproductive.png")
       .feature_title Improdutiva
-      .feature_text Cada juíz julga 47 processos por ano, contra 1.751 na Justiça Federal
+      .feature_text Cada juíz julga em média 47 processos por ano, contra 1.751 na Justiça Federal
     .feature
       = image_tag("justice/condemner.png")
       .feature_title Feita para condenar
@@ -84,7 +84,7 @@
     .text
       p
         strong Passo 1:
-        | O cidadão é acusado de crime militar por um membro das forças armadas. Ele será julgado pela primeira instância da Justiça Militar da União.
+        | O cidadão é acusado de crime militar por um membro das Forças Armadas. Ele será julgado pela primeira instância da Justiça Militar da União.
     .image= image_tag("step-1.jpg")
 
     .text
@@ -96,7 +96,7 @@
     .text
       p
         strong Fim da linha:
-        | Ao contrário da Justiça Federal, onde caberia mais um recurso para o STJ, na Justiça Militar da União a 2ª instância é o último momento possível do processo.
+        | Ao contrário da Justiça Federal, onde caberia mais um recurso antes do Supremo, na Justiça Militar da União isso não é possível.
     .row
       .divider= image_tag("divider-blue.png")
 
